--- a/_base.scss
+++ b/_base.scss
@@ -13,10 +13,22 @@ $breakpoint-small: 520px;
   box-sizing: border-box;
 }
 
-body {
+html {
   background-color: $black-primary;
   background-attachment: fixed;
   color: $text-color;
   // add font family roboto from google fonts
   letter-spacing: 0.1px;
+  scrollbar-width: none;
+}
+
+@mixin line-clamp($number) {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: $number;
+  -webkit-box-orient: vertical;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
